[package]
name = "barr"
description = "Barrel your JavaScript files! 🛢"
version = "0.1.1"
edition = "2021"
authors = ["rust@oreqizer.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
